fix: Fix accessibility contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,13 +206,16 @@ nav h1 a {
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
+  padding-bottom:  5px;
 }
 #restaurants-list li a,
 #review-form button {
-  background-color: #f39e02;
+  background-color: #0275d8;
   border-bottom: 3px solid #eee;
   color: #ffffff;
   font-size: 10pt;
+  /* font-weight: 200
+  ; */
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -253,10 +256,10 @@ nav h1 a {
   width: 100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #e06b03;
   font-family: Arial, sans-serif;
   font-size: 20pt;
-  font-weight: 200;
+  font-weight: 600;
   letter-spacing: 0;
   margin: 15px 0 30px;
   text-transform: uppercase;
